<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".FormActivity">

    <TextView android:layout_width="match_parent"
              android:text="@string/gender"
              android:layout_height="wrap_content"/>

    <RadioGroup android:layout_width="match_parent"
                android:layout_marginStart="10dp"
                android:id="@+id/rg_gender"
                android:layout_height="wrap_content">

        <RadioButton android:layout_width="match_parent"
                     android:text="@string/male"
                     android:id="@+id/rb_male"
                     android:layout_height="wrap_content"/>

        <RadioButton android:layout_width="match_parent"
                     android:text="@string/female"
                     android:id="@+id/rb_female"
                     android:layout_height="wrap_content"/>
    </RadioGroup>

    <TextView android:layout_width="match_parent"
              android:text="@string/languages_known"
              android:layout_height="wrap_content"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_marginStart="10dp"
                  android:orientation="vertical"
                  android:layout_height="wrap_content">

        <CheckBox android:layout_width="match_parent"
                  android:text="@string/english"
                  android:id="@+id/cb_english"
                  android:layout_height="wrap_content"/>

        <CheckBox android:layout_width="match_parent"
                  android:text="@string/georgian"
                  android:id="@+id/cb_georgian"
                  android:layout_height="wrap_content"/>

        <CheckBox android:layout_width="match_parent"
                  android:text="@string/megrelian"
                  android:id="@+id/cb_megrelian"
                  android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button android:layout_width="wrap_content"
            android:text="@string/submit"
            android:id="@+id/btn_submit"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"/>

    <TextView android:layout_width="match_parent"
              android:text="@string/hi"
              android:id="@+id/tv_answer"
              android:gravity="center"
              android:layout_height="match_parent"/>

</LinearLayout>